<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.cned.emdsgil.suividevosfrais.fraisDeRepas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".FraisDeRepasActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFraisDeRepasReturn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:contentDescription="@string/icone_frais_repas"
                    android:src="@drawable/frais_repas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTitleFraisDeRepas"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="start|center"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_frais_repas"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/datFraisDeRepas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:baselineAligned="false"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <EditText
                    android:id="@+id/txtFraisDeRepas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:width="100dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="end|center_vertical"
                    android:inputType="number"
                    android:textIsSelectable="false"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/lblFraisDeRepas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:labelFor="@+id/txtFraisDeRepas"
                    android:text="@string/fraisDeRepas"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="start|center"
                android:orientation="vertical"
                tools:ignore="RtlSymmetry">

                <Button
                    android:id="@+id/cmdFraisDeRepasPlus"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/cmdFraisDeRepasMoins"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:text="@string/moins"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/cmdFraisDeRepasValider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/valider" />
            <requestFocus />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
