<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.cned.emdsgil.suividevosfrais.synchroniser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".synchroniser">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgSynchroniserReturn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_synch"
                    android:src="@drawable/transfert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTitleSynchroniser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="start|center"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title_synch"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtidentifiant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:labelFor="@+id/txtidentifiantARemplir"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/identifiant"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txtidentifiantARemplir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="top|start"
                android:inputType="text"
                android:lines="2">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtmotdepasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:labelFor="@+id/txtmotdepasseARemplir"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/motdepasse"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/txtmotdepasseARemplir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:gravity="top|start"
                android:inputType="text"
                android:lines="2">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/cmdsynchroniser"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/synch" />

            <requestFocus />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
